# snake

./: CMakeLists.txt  README.md  package.xml
code/: main_MaxonMotorWithUI.cpp  main_test.cpp
config/: maxonREV1SetupOldBenchtopTwoCableBend.json
include/snake/: mtsTaskTest.h
launch/: MaxonCalibrationCommandline.launch  StartMaxonPositionMode.launch  StartMaxonVelocityMode.launch  StartMaxonWithUI.launch
launch/inc/: startMaxon.xml
scripts/: motor_control.py
