<package>
  <name>snake</name>
  <version>1.1.0</version>
  <description>
  ex_bigssRobSys_urpolclc
  </description>
  <maintainer email="henry.phalen@jhu.edu">Henry Phalen</maintainer>
  <license>cisst</license>
  <url>https://git.lcsr.jhu.edu/bigss/bigssroboticsystem</url>



  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>cisst</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>cisst</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>



  <export>
    <build_type>catkin</build_type>
  </export>

  <buildtool_depend>catkin</buildtool_depend>


</package>
